<resources>
    <string name="app_name">QuickCalc</string>
    <string name="_9">9</string>
    <string name="input">0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="divide">÷</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="x">x</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add">+</string>
    <string name="_0">0</string>
    <string name="decimal">.</string>
    <string name="equal">=</string>
    <string name="plusMinus">+/-</string>
    <string name="percent">%</string>
    <string name="ac">AC</string>
    <string name="del">⌫</string>
    <string name="u2212">−</string>
    <string name="cal_name">QuickCalc</string>
    <string name="about">About</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help">Help</string>
</resources>