<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="0dp"
    android:layout_marginEnd="5dp"
    android:background="@color/black"
    tools:context=".MainActivity">

    <!-- <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints" /> -->

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/calculator_icon"
        app:layout_constraintEnd_toStartOf="@+id/cal_name"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/cal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="270dp"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/editTextNumber"
        android:layout_width="0dp"
        android:layout_height="105dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:text=""
        android:textAlignment="viewEnd"
        android:padding="10dp"
        android:textSize="60sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="60sp"
        android:autoSizeMinTextSize="18sp"
        android:autoSizeStepGranularity="1sp"
        tools:targetApi="o" />
    
    <GridLayout
        android:id="@+id/buttonGrid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="5"
        android:layout_margin="10dp"
        android:layout_marginTop="-5dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSign"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="2dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="@color/midPurple"
            android:elevation="4dp"
            android:text="@string/plusMinus"
            android:textSize="24sp"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPercent"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="2dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="@color/midPurple"
            android:elevation="4dp"
            android:text="@string/percent"
            android:textSize="24sp"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAC"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="2dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="@color/darkPurple"
            android:elevation="4dp"
            android:text="@string/ac"
            android:textSize="20sp"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="2dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="@color/midPurple"
            android:elevation="4dp"
            android:text="@string/del"
            android:textSize="22sp"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="#3C3B3B"
            android:elevation="4dp"
            android:text="@string/_7"
            android:textSize="24sp"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="#3C3B3B"
            android:elevation="4dp"
            android:text="@string/_8"
            android:textSize="24sp"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="#3C3B3B"
            android:text="@string/_9"
            android:textSize="24sp"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDivide"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="@color/lightPurple"
            android:elevation="4dp"
            android:text="@string/divide"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="#3C3B3B"
            android:elevation="4dp"
            android:text="@string/_4"
            android:textSize="24sp"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="#3C3B3B"
            android:elevation="4dp"
            android:text="@string/_5"
            android:textSize="24sp"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="#3C3B3B"
            android:elevation="4dp"
            android:text="@string/_6"
            android:textSize="24sp"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMultiply"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="@color/lightPurple"
            android:elevation="4dp"
            android:text="@string/x"
            android:textSize="24sp"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="#3C3B3B"
            android:elevation="4dp"
            android:text="@string/_1"
            android:textSize="24sp"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="#3C3B3B"
            android:elevation="4dp"
            android:text="@string/_2"
            android:textSize="24sp"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="#3C3B3B"
            android:elevation="4dp"
            android:text="@string/_3"
            android:textSize="24sp"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSubtract"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="@color/lightPurple"
            android:elevation="4dp"
            android:text="@string/u2212"
            android:textStyle="bold"
            android:textSize="24sp"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDot"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="@color/midPurple"
            android:elevation="4dp"
            android:text="@string/decimal"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="#3C3B3B"
            android:elevation="4dp"
            android:text="@string/_0"
            android:textSize="24sp"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEquals"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="@color/darkPurple"
            android:elevation="4dp"
            android:text="@string/equal"
            android:textSize="24sp"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAdd"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="@color/lightPurple"
            android:elevation="4dp"
            android:text="@string/add"
            android:textSize="24sp"
            app:cornerRadius="25dp" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>